ログイン機能実装

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -7,10 +7,13 @@
   </tr>
 </table>
 
+<div>
+</div>
+
 <div class="container" >
   <div class="row"><font size="2">
     <!-- <span>%= form.file_field :image %></span> -->
     <span><%= form.text_field :content, :placeholder => "キャプションを書く", class: "field" %></span>
-  </div>
-</font></div>
+  </font></div>
+</div>
 <% end %>
