--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,8 +1,23 @@
+.container {
+  width: 500px;
+  height: auto;
+  overflow: hidden;
+  color:#2D2D31;
+  margin: auto;
+  padding: 5px;
+  border: solid 0px
+}
+
+.container a {
+  text-decoration: none;
+}
+
 .menu{
   padding: 5px;
   position: fixed;
   width: 100%;
   text-align: center;
+  height: 5rem;
 }
 
 .menu td {
@@ -19,9 +34,8 @@
 
 .field {
   vertical-align:top;
-  width: 100%;             /* 横幅いっぱいにする */
+  width: 480px;             /* 横幅いっぱいにする */
   box-sizing: border-box;  /* ※これがないと横にはみ出る */
   height: auto;
   font-size: 12px;
-  border: solid 0px;
 }
