--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -12,7 +12,7 @@
 
 <div class="container" >
   <div class="row"><font size="2">
-    <!-- <span>%= form.file_field :image %></span> -->
+    <span><%= form.file_field :image %></span>
     <span><%= form.text_field :content, :placeholder => "キャプションを書く", class: "field" %></span>
   </font></div>
 </div>
