--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 
 <div class="my_page_cover", align="center"><table>
   <tr>
-    <P><%= image_tag @user.image.url %></p>
+    <P><%= image_tag @user.image.url, class:"user-icon" %></p>
     <p><%= @user.name %></p>
   </tr>
   <tr>
