--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,148 @@
-// Place all the styles related to the users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+// ▼new
+.container-fluid {
+  text-align: center;
+  font-family: arial;
+  height: auto;
+  padding-top: 10rem;
+  border: solid 0px;
+}
+
+.logo {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.label {
+  font-size: 1.75rem;
+  color: inherit;
+  margin-top: 2rem;
+}
+
+.text_field {
+  border-radius: 4px;
+  border: 1px solid #666666;
+  width: 50rem;
+  height: 5rem;
+  padding: 1rem;
+  margin-bottom: 2.5rem;
+}
+
+.file_field {
+  margin: auto;
+}
+
+.btn_confirm {
+  text-decoration: none;
+  text-align: center;
+  width: 50rem;
+  height: 5rem;
+  padding: 1rem;
+  color: #FFF;
+  background: #1178F2;
+  border-radius: 4px;/*角の丸み*/
+  border: 0px
+}
+
+.hooter {
+  text-align: center;
+  margin-top: 10rem;
+  margin-bottom: 2rem;
+  color: #1178F2;
+  font-weight: bold;
+}
+
+.guide {
+  color: #666666;
+  font-weight: normal;
+}
+
+// ▼show
+.container {
+  text-align: center;
+  font-family: arial;
+  width: 100%;
+  height: auto;
+  border: solid 0px;
+}
+
+.name {
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: left;
+  margin-top: 7rem;
+}
+
+.sub_name {
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding-left: 2.5%;
+}
+
+.user-icon {
+  width: 50%;
+  height: 50%;
+  margin-top: 1.5rem;
+}
+
+.count {
+  text-align: center;
+  margin-top: 10rem;
+}
+
+// ▼edit
+.prof_edit_menu {
+  width: 100%;
+  text-align: center;
+}
+
+.prof_edit_image {
+  text-align: center;
+  margin: auto;
+}
+
+.prof_edit_icon {
+  text-align: center;
+  margin: auto;
+}
+
+.prof_edit_image_label {
+  text-decoration: none;
+  text-align: left;
+  vertical-align: middle;
+  font-weight: bold;
+  height: 3rem;
+  margin: auto;
+  padding: 1rem 1rem;
+}
+
+.prof_edit_file_field {
+  text-align: center;
+  margin: auto;
+  margin-bottom: 3rem;
+}
+
+.prof_edit {
+  text-align: left;
+  vertical-align: middle;
+  padding: 1.5rem;
+  border: solid 1px #1178F2;
+}
+
+.prof_label {
+  text-align: left;
+  vertical-align: middle;
+  height: 5rem;
+}
+
+.prof_field {
+  text-align: left;
+  border: solid 0px;
+}
+
+.save_btn {
+  text-decoration: none;
+  text-align: center;
+  color: inherit;
+  background: #FFF;
+  border: 0px
+}
