--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,38 +1,46 @@
-<div class="link">
-  <span class="user_title"><%= link_to "<  ", posts_path %></span>
-  <span class="user_title"><%= current_user.name %></span>
+<div class="container">
+  <div class="row">
+    <span class="col-xs-3"><a class="name"><%= current_user.name %></a></span>
+    <span class="col-xs-1"><a class="name"><%= link_to "▶▶", posts_path %></a></span>
+    <span class="col-xs-5"> </span>
+    <span class="col-xs-1"><%= link_to image_tag('new.png', size: '15x15'), new_post_path %></span>
+    <span class="col-xs-1"><%= link_to image_tag('favorite.png', size: '15x15'), favorites_path %></span>
+    <span class="col-xs-1">
+        <% flash.each do |key, value| %>
+          <%= content_tag(:div, value, class: "#{key}") %>
+        <% end %>
+        <% if logged_in? %>
+          <%= link_to image_tag('logout.png', size: '15x15'), session_path(current_user.id), method: :delete %>
+        <% else %>
+        <% end %>
+    </span>
+  </div>
+
+  <div class="row">
+    <span class="col-xs-4">
+      <p><%= image_tag @user.image.url, class:"user-icon" %></p>
+      <p class="sub_name"><%= @user.name %></p>
+    </span>
+    <span class="col-xs-4">
+      <p class="count"><%= @posts_count %></p>
+      <p class="count">投稿</p>
+    </span>
+    <span class="col-xs-4">
+      <p  class="count"><%= @favorites_count %></p>
+      <p class="count">ピン止め</p>
+    </span>
+  </div>
+
+  <P class="row">
+    <button type="button" class="btn btn-outline-dark"><%= link_to "プロフィールを編集", edit_user_path %></button>
+  </p>
 </div>
 
-<div class="my_page_cover", align="center"><table>
-  <tr>
-    <P><%= image_tag @user.image.url, class:"user-icon" %></p>
-    <p><%= @user.name %></p>
-  </tr>
-  <tr>
-    <span class="edit_img"><%= link_to image_tag('favorite.png'), favorites_path %></span>
-    <span class="edit_img"><%= link_to image_tag('edit.png'), edit_user_path %></span>
-    <span class="link">
-      <% flash.each do |key, value| %>
-      　<%= content_tag(:div, value, class: "#{key}") %>
-      <% end %>
-      <% if logged_in? %>
-        <%= link_to image_tag('logout.png'), session_path(current_user.id), method: :delete %>
-      <% else %>
-      <% end %>
-    </span>
-  </tr>
-</table></div>
-
-<div class="container" >
-  <div class="row">
-    <p>連絡先情報</p>
-    <p>
-      <span><%= image_tag('mail.png') %></span>
-      <span class="personal_info"><%= @user.email %></span>
-    </p>
-    <p>
-      <span><%= image_tag('pass.png') %></span>
-      <span class="personal_info">**********</span>
-    </p>
+<% @posts.each do |post| %>
+<div class="card" >
+  <div img class="card-img">
+    <p><%= link_to '…', post_path(post.id) %></P>
+    <p><%= image_tag(post.image.url) if post.image && post.image.url %></P>
   </div>
 </div>
+<% end %>
