--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,15 +1,17 @@
 <%= form_with(model: @post, local: true) do |form| %>
-<table class="menu", align="center">
-  <td class="menu_left"><%= link_to '×', posts_path %></td>
-  <td class="menu_center">投稿を編集</td>
-  <td class="menu_right"><%= form.submit "保存する", class: "save_btn" %></td>
-</table>
+<div class="container">
+  <div class="row" class="prof_edit_menu">
+    <p class="col-xs-4"><%= link_to '×', posts_path %></p>
+  　<p class="col-xs-4">投稿を編集</p>
+  　<p class="col-xs-4"><%= form.submit "保存する", class: "save_btn" %></p>
+  </div>
+</div>
 
 <div class="container" >
   <div class="row">
     <div>
-    　<p><%= form.text_area :content, class: "field" %></p>
       <p class="img"><%= image_tag @post.image.url if @post.image.present? && @post.image.url.present? %></p>
+      <p><%= form.text_area :content, class: "field" %></p>
     </div>
 　</div>
 </div>
