--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,39 +1,48 @@
-<%= image_tag 'logo.png' %>
-
-<div class="link">
-  <span><%= link_to current_user.name, user_path(current_user.id) %></span>
-  <span><font size="2"><%= link_to 'シェア', new_post_path %></font></span>
-  <span>
-    <% flash.each do |key, value| %>
-    　<%= content_tag(:div, value, class: "#{key}") %>
-    <% end %>
-    <% if logged_in? %>
-      <%= link_to image_tag('logout.png'), session_path(current_user.id), method: :delete %>
-    <% end %>
-  </span>
-</div>
+<div class="container">
+  <div class="row">
+    <span class="col-xs-3"><%= image_tag 'logo.png' %></span>
+    <span class="col-xs-6"> </span>
+    <span class="col-xs-1"><%= link_to image_tag('new.png', size: '15x15'), new_post_path %></span>
+    <span class="col-xs-1"><%= link_to image_tag('favorite.png', size: '15x15'), favorites_path %></span>
+    <span class="col-xs-1">
+        <% flash.each do |key, value| %>
+          <%= content_tag(:div, value, class: "#{key}") %>
+        <% end %>
+        <% if logged_in? %>
+          <%= link_to image_tag('logout.png', size: '15x15'), session_path(current_user.id), method: :delete %>
+        <% else %>
+        <% end %>
+    </span>
+  </div>
 
 <% @posts.each do |post| %>
-<div class="container" >
+<div class="container">
   <div class="row">
-    <p class="user_name"><%= post.user.name %></p>
-    <p class="line-clamp"><%= post.content %></p>
-    <p class="watch"><%= link_to 'もっと見る', post_path(post.id) %></p>
-    <p class="img"><%= image_tag(post.image.url) if post.image && post.image.url %></p>
+    <p class="post_user">
+      <span><%= image_tag(post.user.image.url, size: '30x30') %></span>
+      <span><%= post.user.name %></span>
+    </p>
+    <p class="post_img"><%= image_tag(post.image.url) if post.image && post.image.url %></p>
 
       <% unless post.user_id == current_user.id %>
         <% if @favorite.present? %>
-          <%= link_to image_tag('favorite.png'), favorite_path(id: @favorite.id), method: :delete %>
+          <%= link_to image_tag('favorite.png', size: '15x15'), favorite_path(id: @favorite.id), method: :delete %>
         <% else %>
-          <%= link_to image_tag('favorite_not_yet.png'), favorites_path(post_id: post.id), method: :post %>
+          <%= link_to image_tag('favorite_not_yet.png', size: '15x15'), favorites_path(post_id: post.id), method: :post %>
         <% end %>
       <% end %>
 
         <% if post.user_id == current_user.id %>
-      <span class=""><%= link_to image_tag('edit.png'), edit_post_path(post.id) %></span>
-      <span class=""><%= link_to image_tag('delete.png'), post_path(post.id), method: :delete , data: { confirm: '投稿を削除' } %></span>
+      <span class=""><%= link_to image_tag('edit.png', size: '15x15'), edit_post_path(post.id) %></span>
+      <span class=""><%= link_to image_tag('delete.png', size: '15x15'), post_path(post.id), method: :delete , data: { confirm: '投稿を削除' } %></span>
       <% else %>
       <% end %>
+    <p class="post_name">
+      <span><%= post.user.name %></span>
+      <span> </span>
+      <span class="line-clamp"><%= post.content %></span>
+      <span class="watch"><%= link_to '…', post_path(post.id) %></span>
+    </p>
   </div>
 </div>
 <% end %>
