--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,22 +1,20 @@
 <%= image_tag 'logo.png' %>
-
-<div class="link">
-  <span class="user_title"><%= link_to '<', posts_path %></span>
-  <span class="user_title"><%= current_user.name %></span>
-</div>
-
 <div class="container" >
   <div class="row">
-    <p class="user_name"><%= @post.user.name %></p>
-    <p class="field"><%= @post.content %></p>
-    <p class="image">
+    <p class="post_user">
+      <span><%= image_tag(@post.user.image.url, size: '30x30') %></span>
+      <span><%= link_to @post.user.name, posts_path %></span>
+    </p>
+    <p class="post_img">
       <%= image_tag @post.image.url if @post.image.present? && @post.image.url.present? %>
     </p>
+    <p class="post_name"><%= @post.user.name %></p>
+    <p class="post_content"><%= @post.content %></p>
   <% unless @post.user_id == current_user.id %>
     <% if @favorite.present? %>
-    <%= link_to image_tag('favorite.png'), favorite_path(id: @post.id), method: :delete %>
+    <%= link_to image_tag('favorite.png', size: '30x30'), favorite_path(id: @post.id), method: :delete %>
   <% else %>
-    <%= link_to image_tag('favorite_not_yet.png'), favorites_path(post_id: @post.id), method: :post %>
+    <%= link_to image_tag('favorite_not_yet.png', size: '30x30'), favorites_path(post_id: @post.id), method: :post %>
   <% end %>
   <% end %>
   </div>
